all files update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bootstrap One</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
+
+</head>
+
+<body>
+    <!--Navigation bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Laura Greer</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+
+            </span>
+        </div>
+    </nav>
+    <!--End Nav bar-->
+    <!--Main content-->
+    <div class="wrapper">
+      
+            <h1 class="title">About Me</h1>
+            <hr style="border:25px;"/>
+     
+
+        <!--Image-->
+        <span>
+            <img src="https://picsum.photos/g/200/200">
+        </span>
+        <div>
+            <div>
+                <div ID="MyPage" class="col-md">
+                    <p>I'm not really sure what to say about myself. I decided to take courses in web development to
+                        expand my knowledge base and open up more job opportunities for myself. I've worked for several
+                        tech companies and I love the flexability these kinds of jobs can have.</p>
+
+                    <p>I am a workaholic and I love to travel. I've been to 4 of the 7 continents, but should have been
+                        6. I'm a Disney addict - I've been to a Disney theme park at least 15 times and two were this
+                        year. Once in Shanghai this April and WDW in Orlando this October. I love the 80s and a couple
+                        favorite bands are Depeche Mode and The Cure. I enjoy watching movies and usually have a
+                        useless or useful knowledge base of movie quotes stored up to use at any given time ;-)</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <small>&copy; Copyright</small>
+    </footer>
+</body>
+
+</html>
