--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap One</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -43,7 +42,7 @@
     <div class="wrapper">
       
             <h1 class="title">About Me</h1>
-            <hr style="border:25px;"/>
+            <hr>
      
 
         <!--Image-->
@@ -67,7 +66,9 @@
         </div>
     </div>
     <footer class="footer">
-        <small>&copy; Copyright</small>
+        <div class="container">
+           <small>&copy; Copyright</small>
+        </div>
     </footer>
 </body>
 
