small silly tweeks

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <!--Form-->
         <div class="container">
             <h2>Contact</h2>
-            <hr style="border:25px;"/>
+            <hr>
             <form action="#">
                <div class="form-group">
                 <label for="name">Name</label>
@@ -51,7 +51,8 @@
                 <label for="message">Message</label>
                 <textarea class="form-control" id="message" name="message" placeholder="" style="height:200px"></textarea>
                 </div>
-                <input class="btn-success" type="submit" value="submit">
+                <button type="button" class="btn btn-info">Submit</button>
+                
             </form> 
         </div>   
     
