--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,10 @@
     </nav>
     <!--End Nav bar-->
     <!--Main content-->
-    <div class="container bg-white">
+    <div class= "wrapper">
+        <h1>Portfolio</h1>
+        <hr>
+        <div class="container bg-white">
         <div class="row">
             <div class="col-md">
                 <img src="assets/profile bob.png">
@@ -69,7 +72,7 @@
                 
                 </div>
             </div>
-  
+        </div>
         
     </div>      
 
