--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--Main content-->
     <div class="wrapper">
       
-            <h1 class="title">About Me</h1>
+            <h1>About Me</h1>
             <hr>
      
 
