--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
             </ul>
             <span class="navbar-text">
@@ -57,7 +57,7 @@
         </div>   
     
     
-        <footer class="footer">
+        <footer class="footer contact">
             <div class="container">
                 <small>&copy; Copyright</small>
             </div>
