--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
             </div>
             <div class="row">
                 <div class="col-sm nerdybob">
-                    <p><a href="https://github.com/alextyk/Project1.git">Project 1</a></p>    
+                    <p><a href="https://lauragreer3.github.io/Project1-1/">Project 1</a></p>    
                 </div>
                 <div class="col-sm">
                 
