adding backend git repo to portfolio

--- a/index.html
+++ b/index.html
@@ -52,15 +52,12 @@
         <div>
             <div>
                 <div ID="MyPage" class="col-md">
-                    <p> Hello my name is Laura Greer. I decided to take courses in web development to
-                        expand my knowledge base and open up more job opportunities for myself. I've worked for several
-                        tech companies and I have always found this type of work fascinating and ever changing.</p>
+                    <p> I am a highly motivated professional, who is a self starter and has a desire for life long         learning.
+                        I’ve earned my Associate of Applied Science in Hospitality Management, and only one year away from earning my Bachelors in Business Management with an emphasis on International Business. I’m currently attending the University of Denver’s Full-Stack Web Development Bootcamp while also performing my duties as a full time accountant.
+                        I am a highly collaborative team player that also works well alone. I love tackling tough problems and enjoy working on projects big or small, from ideation to fruition. I am able to remain calm and focused when presented with tough schedules, and have a great track record of completing jobs that have been assigned to me.</p>
 
-                    <p> I'm a Disney addict - I've been to a Disney theme park at least 15 times and two were this
-                        year. Once in Shanghai this April and WDW in Orlando this October. I've been to every theme park except
-                        for Hong Kong. I love the 80s and a couple favorite bands are Depeche Mode and The Cure. 
-                        I enjoy watching movies and usually have a useless or useful knowledge base of movie quotes stored
-                        up to use at any given time ;-)</p>
+                    <p> I'm a Disney addict - I've been to a Disney theme park at least 15 times and two were in 2018.     Once in Shanghai this April and WDW in Orlando this October. I've been to every theme park         except for Hong Kong. I love the 80s and a couple favorite bands are Depeche Mode and 
+                        The Cure. I enjoy watching movies and usually have a useless or useful knowledge base of movie quotes stored up to use at any given time ;-)</p>
                 </div>
             </div>
         </div>
