--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                     <p><a href="https://lauragreer3.github.io/TriviaGame/">Trivia Game</a></p>
                 </div>
                 <div class="col-sm homie">
-                    <p>Train Schedule</p>
+                    <p><a href="https://github.com/lauragreer3/bamazon.git/">Bamazon</a></p>
                 </div>
                 <div class="col-sm">
             
