--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Bootstrap One</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     
 </head>
 <body>
@@ -50,6 +51,7 @@
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
                     <img class="rounded-circle" src="#" alt="Generic placeholder image" width="140" height="140">
+                    <!-- <h1 class="display-4"><i class="fas fa-fire"></i> Friend Finder</h1>-->
                     <h2>My LinkedIn</h2>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                     <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
