--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!--Image-->
         <span>
-            <img src="https://picsum.photos/g/200/200">
+            <image id="profileImage" src="assets/profilepic.jpg" />
         </span>
         <div>
             <div>
