--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
                 <div class="col-md-4 col-lg-2 homie">
                     <p><a href="https://github.com/lauragreer3/bamazon.git/">Bamazon</a></p>
                 </div>
-                <div class="col-md-4 col-lg-2">
-                    
+                <div class="col-md-4 col-lg-2 pizzabob">
+                    <p><a href="https://mongo-duck-duck-mongoose.herokuapp.com/">mongo-duck-duck-mongoose</a></p>
                 </div>
             </div>
             <div class="row">
