added project 3 to portfolio, fixed contact logo and added links

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,9 @@
                 <div class="col-md-4 col-lg-2 checkyabob">
                     <p><a href="https://geotrendapp.herokuapp.com/">Project 2</a></p>
                 </div>
-                <!-- <div class="col-md-4 col-lg-2">
-                    <p><a href="">Project 3</a></p>                    
-                </div> -->
+                <div class="col-md-4 col-lg-2 jellybob">
+                    <p><a href="https://young-at-heart.herokuapp.com/login">Project 3</a></p>                    
+                </div>
             </div>
         </div>
         
