--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
                     <p><a class="btn btn-secondary" href="https://github.com/lauragreer3" role="button">View details »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
-                    <img class="rounded-circle" src="#" alt="Generic placeholder image" width="140" height="140">
+                    <img class="rounded-circle" src="assets/linkedin-in-brands.svg" alt="LinkedIn logo" width="140" height="140">
                     <!-- <h1 class="display-4"><i class="fas fa-fire"></i> Friend Finder</h1>-->
                     <h2>My LinkedIn</h2>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+                    <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/lauragreer3/" role="button">View details »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
                     <img class="rounded-circle" src="assets/mail.svg" alt="Email logo" width="140" height="140">
